ingress/demo-web-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-ingress-service
spec:
  selector:
    app: demo-web-ingress
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-web-ingress-service-2
spec:
  selector:
    app: demo-web-ingress-2
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web-ingress-deployment
spec:
  selector:
    matchLabels:
      app: demo-web-ingress
  template:
    metadata:
      labels:
        app: demo-web-ingress        
    spec:
      containers:
      - name: demo-web-ingress
        image: gcr.io/google-samples/hello-app:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"            
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web-ingress-deployment-2
spec:
  selector:
    matchLabels:
      app: demo-web-ingress-2
  template:
    metadata:
      labels:
        app: demo-web-ingress-2        
    spec:
      containers:
      - name: demo-web-ingress-2
        image: gcr.io/google-samples/hello-app:2.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"            
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: demo-web-ingress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: demo-web-ingress.info
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-web-ingress-service
          servicePort: 8080
      - path: /v2/*
        backend:
          serviceName: demo-web-ingress-service-2
          servicePort: 8080
